<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        android:orientation="vertical"
        android:gravity="center">
    <RelativeLayout android:layout_width="match_parent" android:layout_height="match_parent"
    android:orientation="vertical">
        <include
                android:id="@+id/toolbar"
                layout="@layout/tool_bar"/>

        <LinearLayout android:layout_width="match_parent" android:layout_height="match_parent"
                         android:layout_below="@+id/toolbar" android:gravity="top"
                        android:orientation="vertical" android:layout_marginTop="30dp">
            <TextView android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:text="@string/welcome"
                      android:padding="5dp"
                      android:textSize="30sp"
                      android:gravity="center_horizontal"
                      android:id="@+id/text_welcome"
                      android:textStyle="bold"
                      android:textColor="@color/black"/>
            <Button
                    android:layout_gravity="center"
                    android:id="@+id/btn_about_alc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:background="@color/colorAccent"
                    android:text="@string/about_alc"
                    android:padding="15dp"
                    android:layout_margin="15dp"/>
            <Button
                    android:layout_marginTop="50dp"
                    android:layout_gravity="center"
                    android:id="@+id/btn_my_profile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:background="@color/colorAccent"
                    android:text="@string/my_profile"
                    android:padding="15dp"
                    android:layout_margin="15dp"/>
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>